--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,13 @@
  */
 
 
+/* fonts */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,700);
+
 /* reset */
 
 body {
-    font: 1em/1.22 Helvetica, Arial, sans-serif;
+    font: 1em/1.22 'Open Sans', Helvetica, Arial, sans-serif;
     color: #666;
     margin: 0;
 }
@@ -43,7 +46,8 @@ a {text-decoration: none; color: #fefefe}
 .main-nav, footer {
     background: rgb(101, 211, 253);
     color: #fefefe;
-/*     height: 50px; */
+
+    height: 50px;
 }
 
 footer {
@@ -75,6 +79,7 @@ footer {
     width: 300px;
     float: right;
     height: 100%;
+    overflow: hidden;
 }
 
 /* nav styles */
@@ -111,6 +116,12 @@ footer {
 .custom {
     left: 100%;
     background: rgb(217, 245, 250);
+
+    transition: left linear .15s;
+    -webkit-transition: left linear .15s;
+    -moz-transition: left linear .15s;
+    -ms-transition: left linear .15s;
+    -o-transition: left linear .15s;
 }
 
 .sidebar ul {
@@ -131,8 +142,9 @@ footer {
     transform: translateX(-50%);
 }
 
-.sidebar ul li {
-    color: #fff;
+.sidebar ul li,
+#submitCustom {
+    color: #fefefe;
     float: left;
     background: rgb(127, 165, 233);
     padding: 0.4em 0.75em;
@@ -151,6 +163,20 @@ footer {
 .sidebar ul li:last-child {
     border-right: none;
     padding-right: 1em;
+}
+#submitCustom {
+    background: rgb(101, 211, 253);
+    border: none;
+    border-radius: 40px;
+    margin: 20px 0 5px;
+    clear: both;
+    left: 50%;
+    position: relative;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
 }
 
 .title {
@@ -179,7 +205,7 @@ footer {
 #exitCustom {
     position: absolute;
     width: 100%;
-    bottom: -20px;
+    bottom: 0;
 }
 
 #toCustom:hover,
