--- a/songwritr/views/index.jade
+++ b/songwritr/views/index.jade
@@ -1,5 +1,65 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+!!! 5
+html(lang='en')
+head
+    title Songwritr
+    meta(name='viewport', content='width=device-width, initial-scale=0.8')
+    link(rel='icon', type='image/ico', href='img/icon.png')
+    link(rel='stylesheet', href='css/style.css')
+  body
+    nav.main-nav
+      .wrap
+        .logo.left Songwritr
+        ul.links.right
+          li#about
+            a(href='/about', target='_blank') About
+    //
+       main 
+    .main
+      .canvas
+        .wrap
+      .sidebar
+        section.chord-chooser
+          .quickadd
+            .title Quick Chords
+            ul
+              li G
+              li Am
+              li Bm
+              li C
+              li D
+              li Em
+            #toCustom Custom Chord »
+          .custom
+            ul.root
+              li C
+              li D
+              li E
+              li F
+              li G
+              li A
+              li B
+            ul.sharp
+              li #
+              li b
+            ul.opts
+              li minor
+              li sus
+              li dim
+              li aug
+            ul.upper
+              li 4
+              li 5
+              li 7
+              li 9
+              li 11
+              li 13
+            #exitCustom « Back
+    //
+       end main
+    footer
+      .wrap
+        .copyright.left (c) 2014
+        ul.links.right
+          li#unhackathon
+            | Made at
+            a(href='www.unhackathon.org') Unhackathon
