--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ footer {
     width: 100%;
     bottom: 0;
     font-size: .8em;
-    padding: .5em 0;
+    padding: 0.5em 0;
     height: 15px;
 }
 
@@ -227,4 +227,20 @@ footer {
 #exitCustom:hover {
     cursor: pointer;
     color: rgb(128, 128, 201);
+}
+
+
+/* canvas styles */
+
+#tArea {
+    position: absolute;
+    top: 0;
+    bottom: 13px; 
+    left: 2px;
+    width: 300px;
+}
+#canv {
+    position: absolute;
+    left: 310px;
+    top: 2px;
 }
