--- a/songwritr/views/index.html
+++ b/songwritr/views/index.html
@@ -7,6 +7,8 @@
 	<!-- <link rel="stylesheet" href="css/font-awesome.min.css"> -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
+	<script src = "js/animation.js"></script>
+	<script src = "js/easeljs-0.7.1.min.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
